fix(post) : 조회 시 삭제 된 글 제외